History in reverse order
----------------------------------------------------

----------------------------------------------------
infosme-build-20100329 12:20 bukind

2010-03-26 13:00 bukind
 bugfix: when task is disabled, its inProcess flag was not reset

2010-03-19 16:55 bukind
 feature: support for incoming DATA_SM receipts

----------------------------------------------------
infosme-build-20100310 18:00 bukind

2010-03-10 17:45 bukind
 bugfix: message to set state=DELETED are forced to be loaded from disk

2010-03-10 11:57 bukind
 bugfix: deleted records should not be seen 

2010-03-09 15:55 bukind
 bugfix: processed files don't watch their readAll field

----------------------------------------------------
infosme-build-20100309 13:00 bukind

2010-03-09 13:00 bukind
 bugfix: exc thrown after successfully loading msg in a CsvStore::loadMessage

2010-02-24 16:50 bukind
 feature: processed final messages are purged from memory

2010-02-15 14:30 bukind
 bugfix: processed csv files were being opened in CsvStore::getNextMessage()
2010-02-15 14:00 bukind
 bugfix: statistics manager was not properly stopped in taskproc dtor
2010-02-15 11:35 bukind
 bugfix: memleak when reading ConfigView fixed

----------------------------------------------------
infosme-build-20100208 12:40 bukind

2010-02-08 12:35 bukind
 bugfix: RegExp::InitLocale() was forgotten

----------------------------------------------------
infosme-build-20100205 16:50 bukind

2010-02-03 16:30 bukind
 feature: ill-formed receipts are now processed also (in both v1 & v2)

2009-12-28 18:02 bukind
 bugfix: OA for task/msg is checked when TaskInfo is loaded
         and just before sending message.

2009-12-28 13:10 bukind
 bugfix: when OA is wrong message gets failed (should not be resent)

----------------------------------------------------
infosme-build-20091211 11:50 bukind

2009-12-10 13:40 skv
 bugfix: bug in File::ReadDir - resource leakage
2009-12-09 16:10 bukind